deployment/app-deployment/k8s/overlays/dev/superuser-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meal-plan-analyzer
spec:
  template:
    spec:
