deployment/app-deployment/k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meal-plan-analyzer-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns-issuer
spec:
  tls:
    - hosts:
        - mealplananalyzer-dev.saadeh.dev
      secretName: meal-plan-analyzer-dev-tls
  rules:
    - host: mealplananalyzer-dev.saadeh.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meal-plan-analyzer-service
                port:
                  number: 80
